# docling-experimentation

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  main.py  pipdeptree.txt  pyproject.toml  test_docling.ipynb  test_docling.py  test_docling_vlm.ipynb  test_docling_vlm_extraction.ipynb
scratch/: 2408.09869v5.doctags  2408.09869v5.json  Vodafone 2025 Annual Report 10.doctags  Vodafone 2025 Annual Report 10.json  Vodafone 2025 Annual Report 10.md  Vodafone 2025 Annual Report 10.txt
