[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-experimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.64.0",
    "easyocr>=1.7.2",
    "pipdeptree>=2.30.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
notebook = [
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "notebook>=7.5.0",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "voila>=0.5.11",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    "build",
    "dist",
    "__pycache__",
    "*.ipynb"
]
fix = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

task-tags = ["HACK", "TODO"]

[tool.pydocstyle]
convention = "google"
add-ignore = "D104,D418"

[tool.pyrefly]
# Set the directory Pyrefly will search for files to type check
project-includes = ["turtle_quant_1/*"]
project-excludes = ["**/*venv/**/*"]

# Manually set the `sys.platform` Pyrefly will assume when type checking
python-platform = "linux"

# Return an import error when `<library>-stubs` can be imported, but no non-stubs version of that library can be found
ignore-missing-source = false

# A table mapping error codes to an `is-enabled` boolean
[tool.pyrefly.errors]
# Disable `bad-assignment` errors
bad-assignment = false
# Disable `bad-return` errors
bad-return = false
